--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,31 @@
 [package]
 name = "bgpsimulator"
 version = "0.1.0"
-edition = "2024"
+edition = "2021"
 description = "A BGP protocol simulator written in Rust."
 license-file = "License.txt"
 repository = "https://github.com/jfuruness/bgpsimulator_rust"
 documentation = "https://docs.rs/bgpsimulator"
 
+[lib]
+name = "bgpsimulator"
+path = "src/lib.rs"
+
+[[bin]]
+name = "bgpsimulator"
+path = "src/main.rs"
+
 [dependencies]
+ipnetwork = "0.20"
+lru = "0.12"
+chrono = "0.4"
+reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls"] }
+bzip2 = "0.4"
+scraper = "0.17"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+rand = "0.8"
+dirs = "5.0"
+num_cpus = "1.16"
+indicatif = "0.17"
+lazy_static = "1.5"
